# stock-scrape

./: .gitignore  Cargo.toml  Readme.md  ticker_list.csv
src/: main.rs
