[package]
name = "stock-scrape"
version = "0.1.0"
edition = "2021"
description = "A simple stock scraper"
license = "CC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
csv = "1.2.0"
serde = {version="1.0.152", features=["derive"]}
